Fix: Resolve Thread Safety, NPEs, Deadlock, and Alt-Account False Positives